tests/func/parsing/error_recovery/test_error_recovery_complete.err
1:12: syntax error: unexpected token 
    1 | 1 + 2 + * 3 & 89 - 5
      |             ^^^ expected: ) * + - / STOP ^